--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TOKEN=6539685039:AAEVmpdbJ1Yy2Dwum1LYQql5M_lbK7I1tbc
 CHAT_ID=5611451923
 SECRET_KEY=django-insecure-td8vmk=c085ua6ae4#70#75%af*3on4(&zue^i9yr)$v1c7qc)
-DEBUG=True
+DEBUG=False
